[package]
name = "rpgsanta_2022"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]

[dev-dependencies]
serenity = { version = "0.11", default-features = false, features = ["client", "gateway", "rustls_backend", "model"] }
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
