[package]
name = "rpgsanta_2022"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
serde = { version = "1", features = ["derive"] }
bincode = "1"
tinyvec = { version = "1", features = ["rustc_1_55"] }

[dev-dependencies]
serenity = { version = "0.11", default-features = false, features = ["client", "gateway", "rustls_backend", "model"] }
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
libc = { version = "0.2", features = ["extra_traits"] }

